# sats_car_ros

./: README.md
high_level_simulation/: hl_ctrl.m  hl_integrated_track.m
sats_car_ros/: CMakeLists.txt  package.xml
sats_car_ros/doc/: readme.aux  readme.tex
sats_car_ros/launch/: characterization.launch  compile.launch  compile_all.launch  init_car.launch  run_cars.launch
sats_car_ros/msg/: CarCommand.msg  ControllerCommand.msg  GpsData.msg  KalmanData.msg  MasterCommand.msg  SensorData.msg  UserCommand.msg  VelocityData.msg  msgs
sats_car_ros/src/: char_low_level.py  compile.py  controller.py  master_publisher.py  nohup.out  path.csv  sensor_hub.py
sats_car_ros/yaml/: bb10_motor.yaml  bb1_motor.yaml  bb2_motor.yaml  bb5_motor.yaml  bb6_motor.yaml  bb9_motor.yaml  params.yaml  params0.yaml  params1.yaml
src/: FIRFilter.c  FIRFilter.h  VP_main.c  VP_tm4c123gh6pm.h  charizer.c  charizer.h  fifo.c  fifo.h  i2cman.c  i2cman.h  lidar.c  lidar.h  logger.c  logger.h  motors.c  motors.h  qei.c  qei.h  rajamani.c  rajamani.h  startup_TM4C123.s  timing.c  timing.h  xbee.c  xbee.h
