<?xml version="1.0"?>
<package>
  <name>sats_car_ros</name>
  <version>1.0.2</version>
  <description>sats_car_ros</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="samuel.alan.mitchell@gmail.com">Sam Mitchell</maintainer>
  <license>GPLv2</license>
  <author email="samuel.alan.mitchell@gmail.com">Sam Mitchell</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!-- <build_depend>rospy</build_depend> -->

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend> 
  <!-- <run_depend>rospy</run_depend>-->

</package>
